fix: 修复 bt 元数据解析问题；更改 分类管理 为 分组管理
